e2e delegate mining basics working

--- a/sample-btcd.conf
+++ b/sample-btcd.conf
@@ -343,3 +343,16 @@
 ; be disabled if this option is not specified.  The profile information can be
 ; accessed at http://localhost:<profileport>/debug/pprof once running.
 ; profile=6061
+
+; ------------------------------------------------------------------------------
+; Delegate Miner
+; ------------------------------------------------------------------------------
+
+; Enable Delegate mining.
+;
+; delegate=false
+
+; Add addresses to pay commission on mined blocks to for Delegate mining. One address per line.
+; commissionaddr=1yourbitcoinaddress
+; commissionaddr=1yourbitcoinaddress2
+; commissionaddr=1yourbitcoinaddress3
