working version that can expand to parallel workers, and can be stopped by the client

--- a/sample-btcd.conf
+++ b/sample-btcd.conf
@@ -356,3 +356,15 @@
 ; commissionaddr=1yourbitcoinaddress
 ; commissionaddr=1yourbitcoinaddress2
 ; commissionaddr=1yourbitcoinaddress3
+
+; ------------------------------------------------------------------------------
+; Websocket server
+; ------------------------------------------------------------------------------
+
+; Websocket SSL
+;
+; wss_ssl=true
+
+; Websocket Port
+;
+; wss_port=443
